[package]
name = "wlrs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["std", "derive", "help", "color", "usage", "error-context"] }
parking_lot = "0.12.4"
thiserror = "2.0.14"
tungstenite = { version = "0.27.0", features = ["native-tls"] }
wlrs = { path = ".." }
wlrs-auth = { path = "../wlrs-auth" }

[build-dependencies]
dotenv = { version = "0.15.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true
